--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^2.7.2",
     "q": "^1.5.1",
     "request": "^2.73.0",
+    "restify": "^4.0.3",
     "stringformat": "^0.0.5",
     "validator": "^5.4.0"
   },
