--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "addressparser": "^1.0.1",
     "amqp": "^0.2.6",
     "async": "^2.1.2",
+    "body-parser": "^1.19.0",
     "config": "^1.21.0",
+    "crypto": "^1.0.1",
     "dustjs-linkedin": "^2.7.2",
     "dvp-common": "^1.2.0",
     "dvp-mongomodels": "^5.3.14",
