--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "crypto": "^1.0.1",
     "dustjs-linkedin": "^2.7.2",
     "dvp-common": "^1.2.0",
-    "dvp-mongomodels": "^5.3.19",
+    "dvp-mongomodels": "^6.1.5",
     "juice": "^2.0.0",
     "mail-listener": "^0.7.1",
     "mail-listener2": "^0.2.0",
     "mailin": "^3.0.3",
+    "mailparser": "^3.0.1",
     "mongoose": "^4.5.5",
     "node-uuid": "^1.4.7",
     "nodemailer": "^2.7.2",
